deployment/frontend/manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-svc
spec:
  selector:
    app: messaging-app
  ports:
    - name: http
      port: 80
      targetPort: 8501
      nodePort: 31425
  type: NodePort
